force-app/main/default/objects/Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address Type</label>
    <referenceTo>Address_Type__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>