force-app/main/default/objects/Address__c/fields/Address_Type_old__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_old__c</fullName>
    <label>Address Type Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill-to</fullName>
            </value>
            <value>
                <fullName>Ship-to</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Visiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>