force-app/main/default/objects/Address__c/fields/CCUST__c.field-meta.xml
<CustomField>
    <fullName>CCUST__c</fullName>
    <label>CCUST</label>
    <length>10</length>
    <type>Text</type>
</CustomField>