force-app/main/default/objects/Address__c/fields/Country_code_3__c.field-meta.xml
<CustomField>
    <fullName>Country_code_3__c</fullName>
    <label>Country code (3)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>