force-app/main/default/objects/Address__c/fields/Fam_Code__c.field-meta.xml
<CustomField>
    <fullName>Fam_Code__c</fullName>
    <label>Fam Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>