force-app/main/default/objects/Address__c/fields/Import_tag__c.field-meta.xml
<CustomField>
    <fullName>Import_tag__c</fullName>
    <label>Import tag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>