force-app/main/default/objects/Address__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox indicates that this is the main billing address for this account. This address will auto-populate Opportunity and Quote address.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>