force-app/main/default/objects/Address__c/fields/Ship_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Number__c</fullName>
    <label>Ship to Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>