force-app/main/default/objects/Address__c/validationRules/AccountHasPrimary.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountHasPrimary</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
Primary__c = true,
Account__r.HasPrimaryAddress__c = true, 
ISCHANGED(Primary__c) ),
True, False)</errorConditionFormula>
    <errorMessage>The account you are trying to make this address primary for already has a primary address.</errorMessage>
</ValidationRule>