force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>Address_Line_3__c</columns>
    <columns>Country__c</columns>
    <columns>Address_Type_old__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>